# REFLECTION_PATTERN_AGENT

./: Dockerfile  README.md  lab_reflection_agent.ipynb  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
reflection_pattern_agent/: reflection_agent.py
reflection_pattern_agent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_reflection_agent.py
